2022-10-02  Markus Gans  <guru.mail@muenster.de>
	* Strict use of trailing return type

2022-06-13  Markus Gans  <guru.mail@muenster.de>
	* Added a unit test for the FWidget class

2022-05-29  Markus Gans  <guru.mail@muenster.de>
	* Avoiding some friend classes

2022-05-24  Markus Gans  <guru.mail@muenster.de>
	* A unit test for the FEvent class was added

2022-05-18  Markus Gans  <guru.mail@muenster.de>
	* Fixed some errors

2022-05-04  Markus Gans  <guru.mail@muenster.de>
	* Bug fixes in FLineEdit: 
	  - Swapped cursor move behavior in the methods stepCursorBackward() 
	    and stepCursorForward() 
	  - The inputText method now repositions the cursor on input and 
	    updates the change directly on the screen 
	  Thanks to Michael Lehn for reporting these issues

2022-04-17  Markus Gans  <guru.mail@muenster.de>
	* The FLineEdit and FTextView widgets got additional public methods for 
	  more control. Many thanks to Michael Lehn for the good suggestions

2022-03-01  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: Since February 14, setting the input cursor for the virtual 
	  terminal did not work

2022-03-01  Markus Gans  <guru.mail@muenster.de>
	* A virtual window can now be placed above the virtual terminal

2022-02-14  Markus Gans  <guru.mail@muenster.de>
	* FVTerm::copyArea copies the data of the source area to the position 
	  of the destination area
	* FTermArea got methods to set the print position and to print data
	* Added examples/xpmview to view X PixMap (XPM) images in a terminal

2022-02-02  Markus Gans  <guru.mail@muenster.de>
	* Depending on the number of dialog windows, FDialogListMenu 
	  is now automatically enabled and disabled
	* FFileDialog now shows the file filter in the title bar

2022-01-29  Markus Gans  <guru.mail@muenster.de>
	* Minor bug fix for resizing dialogs
	* FTextView::FTextHighlight has received new constructors without 
	  length information. That allows to highlight text up to the end 
	  of the line
