@@ -16,18 +16,18 @@ jobs:
     - name: Repository checkout
       uses: actions/checkout@v2
 
-    - name: Test on OpenBSD 6.9
+    - name: Test on OpenBSD 7.1
       uses: cross-platform-actions/action@v0.6.2
       with:
         operating_system: openbsd
-        version: '6.9'
+        version: '7.1'
         shell: bash
         run: |
           uname -a
           whoami
           pwd
-          # http://ftp.openbsd.org/pub/OpenBSD/6.9/packages/amd64/
-          sudo pkg_add gcc-8.4.0p6 g++-8.4.0p6 automake-1.16.3 autoconf-2.71 autoconf-archive libtool pkgconf cppunit
+          # http://ftp.openbsd.org/pub/OpenBSD/7.1/packages/amd64/
+          sudo pkg_add gcc-11.2.0p2 g++-11.2.0p2 automake-1.16.3 autoconf-2.71 autoconf-archive libtool pkgconf cppunit
           export CXX=eg++
           export AUTOCONF_VERSION=2.71
           export AUTOMAKE_VERSION=1.16
