@@ -21,7 +21,6 @@
 ***********************************************************************/
 
 #include <numeric>
-#include <queue>
 #include <string>
 #include <vector>
 
